# programming-languages-zoo

./: .pre-commit-config.yaml
dotnet/: .gitignore  LanguagesZoo.sln  README.org
dotnet/src/Brainfuck/: Brainfuck.csproj  Compiler.cs  Parser.cs  Program.cs  README.md
dotnet/src/Brainfuck/examples/: HelloWorld.bf  Mandelbrot.bf  Print0To99.bf  ROT13.bf
dotnet/src/LetLang.Base/: Eval.fs  LetLang.Base.fsproj  Parser.fs  Repl.fs  Runtime.fs
dotnet/src/LetLang.Cont/: Cont.fs  Eval.fs  LetLang.Cont.fsproj  Repl.fs
dotnet/src/LetLang.LexicalAddressing/: Eval.fs  LetLang.LexicalAddressing.fsproj  Parser.fs  Repl.fs  Runtime.fs  Translator.fs
dotnet/tests/LetLang.Base.Tests/: EvalTests.fs  LetLang.Base.Tests.fsproj  ParserTests.fs  RuntimeTests.fs
dotnet/tests/LetLang.Cont.Tests/: EvalTests.fs  LetLang.Cont.Tests.fsproj
dotnet/tests/LetLang.LexicalAddressing.Tests/: EvalTests.fs  LetLang.LexicalAddressing.Tests.fsproj  RuntimeTests.fs  TranslatorTests.fs
little-scheme-in-python/: pyproject.toml  scheme0.py
python/: .gitignore  pyoxidizer.bzl  pyproject.toml
python/little_scheme/: basic.py  cli.py  common.py  tco.py
