[tool.poetry]
name = "little-scheme"
version = "0.1.0"
description = "Little Scheme language playground."
authors = ["Tianyu Gu <macdavid313@gmail.com>"]
readme = "README.md"
packages = [{include = "scheme0"}]

[tool.poetry.dependencies]
python = "^3.10"
sexpdata = "^0.0.3"
prompt-toolkit = "^3.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
