[tool.poetry]
name = "little-scheme"
version = "0.1.0"
description = "Little Scheme language playground."
authors = ["Tianyu Gu <macdavid313@gmail.com>"]
packages = [{include = "little_scheme"}]

[tool.poetry.dependencies]
python = "^3.10"
sexpdata = "^0.0.3"
prompt-toolkit = "^3.0.31"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.3"
ipython = "^8.5.0"

[tool.poetry.scripts]
little-scheme = "little_scheme.basic:scheme"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
