[project]
name = "little-scheme"
version = "0.1.0"
description = "Little Scheme language playground."
authors = [
    {name = "Tianyu Gu", email = "macdavid313@gmail.com"},
]
dependencies = [
    "sexpdata>=0.0.3",
    "Pygments>=2.13.0",
    "prompt-toolkit>=3.0.31",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
little-scheme = { call = "little_scheme.cli:main" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pdm.dev-dependencies]
dev = [
    "debugpy>=1.6.3",
    "ipython>=8.5.0",
]
